--- a/docroot/sites/all/themes/opensource/sass/partials/base/_base.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/base/_base.scss
@@ -1,5 +1,5 @@
 body {
-    line-height: 1.5;
+    line-height: 1.4;
 }
 
 a {
