--- a/docroot/sites/all/themes/opensource/sass/partials/footer/_footer-nav.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/footer/_footer-nav.scss
@@ -1,7 +1,12 @@
 #block-menu-block-1 {
+    float: left;
+
     ul {
+        margin: 0;
         padding-left: 0;
         list-style: none;
+        clear: both;
+        overflow: hidden;
     }
 
     li {
