--- a/docroot/sites/all/themes/opensource/sass/partials/footer/_footer-top.scss
+++ b/docroot/sites/all/themes/opensource/sass/partials/footer/_footer-top.scss
@@ -11,5 +11,6 @@
 
     #block-block-1 {
         color: #333;
+        margin-bottom: 2.5em;
     }
 }
